2012-12-01  Joseph Myers  <joseph@codesourcery.com>

	* manual/arith.texi (feenableexcept): Fix typo.
	(fedisableexcept): Likewise.

2012-11-30  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/powerpc/powerpc64/entry.h (TEXT_START): Define using a
	second, differently-typed declaration, rather than a cast.

2012-11-30  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sunrpc/rpc/svc.h (__svc_accept_failed): Move declaration...
	* include/rpc/svc.h: ... here.

2012-11-30  Aurelien Jarno  <aurel32@debian.org>

	[BZ #13013]
	* resolv/res_query.c(__libc_res_nquery): Assign hp and hp2
	depending n and resplen2 to catch cases where answer
	equals answerp2.

2012-11-29  Carlos O'Donell  <carlos@systemhalted.org>

	* elf/get-dynamic-info.h (elf_get_dynamic_info): Warn
	for unsupported DF_1_* bits when DL_DEBUG_FILES is set.

2012-11-29  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/clock_getcpuclockid.c (HAS_CPUCLOCK): Delete.

2012-11-29  Roland McGrath  <roland@hack.frob.com>

	* inet/tst-inet6_rth.c (do_test): Use a union rather than type punning.

2012-11-28  Jeff Law  <law@redhat.com>

	[BZ #13761]
	* nscd/grpcache.c (cache_addgr): Rename alloca_used to
	dataset_temporary.  Track alloca usage into alloca_used.
	If dataset is large allocate and release it via malloc/free.

2012-06-04  Florian Weimer  <fweimer@redhat.com>

	[BZ #14197]
	* debug/test-strcpy_chk.c: Mention __chk_fail ABI test.

2012-11-28  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-11-28  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14803]
	* sysdeps/ieee754/ldbl-96/e_asinl.c (pio2_hi): Use hex float value
	of pi/2 rounded to nearest to 64 bits.
	(pio2_lo): Use hex float value of pi/2 - pio2_hi rounded to
	nearest to 64 bits.
	(pio4_hi): Use hex float value of pi/4 rounded to nearest to 64
	bits.

2012-11-28  Jeff Law <law@redhat.com>
	    Martin Osvald <mosvald@redhat.com>

	[BZ #14889]