@@ -1,3 +1,10 @@
+2012-12-01  Mike Frysinger  <vapier@gentoo.org>
+
+	* libio/fileops.c (_IO_new_file_close_it): Do not always flush
+	when currently writing and seek to current position when not.
+	* libio/Makefile (tests): Remove bug-fclose1.
+	* libio/bug-fclose1.c: Delete.
+
 2012-12-01  Joseph Myers  <joseph@codesourcery.com>
 
 	* manual/arith.texi (feenableexcept): Fix typo.
